--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,13 @@ body{
 }
 html {
     scroll-behavior: smooth;
+    width: 100vw;
+    overflow-x: hidden;
   }
 .container-fluid{
   margin: 0 !important;
   padding: 0 !important;
+  width: 100%;
 }
 .container-fluid.main{
     position: relative; /* To make the navbar positions relative to this container */
@@ -63,7 +66,7 @@ html {
   
   .carousel .background {
     background-position: center center;
-    background-size: 100% 100%;
+    background-size: 100vw 100vh;
     background-repeat: no-repeat;
     height: 100vh;
   }
@@ -76,6 +79,7 @@ html {
   
   .carousel .background.a {
     background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/typewriter.jpg);
+    width: 100vw;
   }
   
  
@@ -211,6 +215,7 @@ footer {
  .col-sm-5{
    height: 100vh;
    margin: 0;
+   padding: 0 !important;
  }
  .col-sm-7{
    background-color: #393e46;
@@ -230,15 +235,26 @@ footer {
 height: 100%;
 }
 .image-about{
-  height: 100%
+  height: 100vh;
+  object-fit: fill;
 }
-.col-sm-3{
+
+.jumbotron-about{
+  margin-bottom: 0;
+}
+/* .col-sm-4{
   width: 90%;
 background-color: lightgray;
   padding: 2rem;
-}
-.col-sm-6{
- height: 100vh
+} */
+.col-sm-4{
+  width: 100%;
+ height: 100vh;
+ margin: auto;
+ padding: 0 !important;
+ background-color: lightgray;
+ border: #4ecca3;
+ border-width: 5px;
 }
   
 
